--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "laviniamusicstudio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://izzyjhuang.com/laviniamusicstudio",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -17,8 +18,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "homepage": "https://izzyjhuang.com/laviniamusicstudio"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
